Closed Bug 351879 Opened 18 years ago Closed 18 years ago

crash calling refresh() during a refresh

Categories

(Core Graveyard :: XForms, defect)

x86
All
defect
Not set
normal

Tracking

(Not tracked)

RESOLVED FIXED

People

(Reporter: aaronr, Assigned: smaug)

Details

(Keywords: fixed1.8.0.8, fixed1.8.1.1)

Attachments

(2 files)

If you call the refresh() function during the handling of a xforms-value-changed event (which is dispatched during the handling of refresh) then we could trap.  Because we are clearing out the sContainerPostRefreshList while we are in the middle of using it.
Attached file testcase
testcase from sniper on the NG
Attached patch proposed patchSplinter Review
Moving null check from |if| to |while| should be enough.
Assignee: xforms → Olli.Pettay
Status: NEW → ASSIGNED
Attachment #239003 - Flags: review?(aaronr)
Comment on attachment 239003 [details] [diff] [review]
proposed patch

nice.  Thanks!
Attachment #239003 - Flags: review?(aaronr) → review+
Attachment #239003 - Flags: review?(doronr)
Attachment #239003 - Flags: review?(doronr) → review+
Status: ASSIGNED → RESOLVED
Closed: 18 years ago
Resolution: --- → FIXED
Whiteboard: xf-to-branch
checked into 1.8.0 branch on 2006/09/21
Keywords: fixed1.8.0.8
checked into 1.8 branch on 2006/11/21
Keywords: fixed1.8.1.1
Whiteboard: xf-to-branch
Product: Core → Core Graveyard
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Creator:
Created:
Updated:
Size: