Bug 351879, crash calling refresh() during a refresh, r=aaronr+doronr